Add compatibility with Java 9+